--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -21,7 +21,7 @@
   <parent>
     <groupId>org.apache.spark</groupId>
     <artifactId>spark-parent_2.11</artifactId>
-    <version>2.4.1-SNAPSHOT</version>
+    <version>2.4.0-kylin-r1</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -108,12 +108,6 @@
       <groupId>com.github.scopt</groupId>
       <artifactId>scopt_${scala.binary.version}</artifactId>
       <version>3.7.0</version>
-    </dependency>
-    <dependency>
-      <groupId>org.apache.parquet</groupId>
-      <artifactId>parquet-hadoop-bundle</artifactId>
-      <version>${parquet.version}</version>
-      <scope>provided</scope>
     </dependency>
   </dependencies>
 
